Migrate to Spring Security and OIDC Support